# ddiff

./: LICENSE  ddiff.cabal
cpp/: CMakeLists.txt
cpp/src/: diff.cpp  diff.hpp  fileio.cpp  fileio.hpp  filetype.cpp  filetype.hpp  lazy.hpp  main.cpp  memoize.hpp  natkey.cpp  natkey.hpp  opts.cpp  opts.hpp  trace.cpp  trace.hpp
hs/: ddiff.cabal
py/: ddiff.py
src/: Main.hs  ddiff.py
