cabal-version:       2.4

name:                ddiff
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              mingmingrr
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

executable ddiff
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , brick
                     , vty
                     , lens
                     , unix-compat
                     , filepath
                     , directory
                     , bytestring
                     , text
                     , optparse-applicative
                     , natural-sort
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -O
