cabal-version:       2.4

name:                ddiff
version:             0.1.0.0
synopsis:            compare directories
description:         compare two directories and edit differing files
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              mingmingrr
maintainer:          mingmingrr@gmail.com
-- copyright:
category:            System
-- extra-source-files:

source-repository head
  type:     git
  location: git://github.com/mingmingrr/ddiff.git

executable ddiff
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base < 5
                     , brick
                     , vty
                     , lens
                     , unix-compat
                     , filepath
                     , directory
                     , bytestring
                     , text
                     , optparse-applicative
                     , natural-sort
                     , process
                     , vector
  -- hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
